--- a/openhands/agenthub/codeact_agent/prompts/system_prompt.j2
+++ b/openhands/agenthub/codeact_agent/prompts/system_prompt.j2
@@ -96,9 +96,10 @@ IMPORTANT: This is extra knowledge you can use for reasoning and answering user 
 
 {% if agent_infos %}
 <A2A_INFO>
-1. If you don't have sufficient tools to solve the task, look for an agent that can help you. Read the agent's description and use it to determine if it can help you.
+1. If the tasks relate to an A2A agent's description, prioritize calling the agent to solve the task.
 2. When send task to an agent, you must preserve the user's message that detected the task and forward it to the agent.
-3. The list of agents available to you to send tasks to:
+3. After receiving the result from the agent, think step by step and decide if the result needs additional calls to the A2A agents or additional tool calling to solve the task.
+4. The list of agents available to you to send tasks to:
 Agents:
 {% for agent_info in agent_infos %}
 - name: {{ agent_info.name }}
